2007-02-08  Titus Brown  <t@localhost.localdomain>

	* Global forms no longer show up IF EMPTY.

2007-02-04  Titus Brown  <t@localhost.localdomain>

	* Switched to MIT license.

2007-01-29  Titus Brown  <t@localhost.localdomain>

	* Removed BeautifulSoup.py in favor of the one included with
	  mechanize.

	* Added pages 'show_environ' and 'show_post' to twilltestserver.

	* Added commands 'add_extra_header', 'show_extra_headers', and
	  'clear_extra_headers', + tests & docs.  (Shaun Walbridge)

	* Always display proper form number in showforms.

2007-01-24  Titus Brown  <t@localhost.localdomain>

	* Made twill tests work under Windows-cygwin too!

2007-01-23  Titus Brown  <t@localhost.localdomain>

	* Made twill tests work under Windows+cygwin by switching to
	  subprocess.

2007-01-16  Titus Brown  <t@localhost.localdomain>

	* Fixed twill tests (!?)

2007-01-14  Titus Brown  <t@localhost.localdomain>

	* global_form is now form[0] if present.

	* Deprecated allow_parse_errors config option; isn't needed for
	  latest mechanize.

	* Updated mechanize and ClientForm to latest svn; patched to pass
	  twill tests.  Preserved originals in mechanize/_html.py.jjl,
	  ClientForm.py.jjl.

2007-01-09  Titus Brown  <t@localhost.localdomain>

	* Added complete_fv to formvalue completion patch.

	* Added formvalue completion patch (Seo Sanghyeon).

2006-11-29  Titus Brown  <t@localhost.localdomain>

	* Fixed test-form.twill to match new output format.

	* Patched __init__.py to remove UNIX-specific '/' from the
	  sys.path insert statement.  (Ramon Felciano)

	* Patched wsgi_intercept: REMOTE_ADDRESS ==> REMOTE_ADDR.

2006-11-01  Titus Brown  <t@localhost.localdomain>

	* formvalue now returns an informative error message when
	  a file upload field is touched (Matthew Singer)

	* Added Andy Chamber's formfill patch.

	* Added tests for Andy Chambers's formfill patch.

	* Fixed bug in mechanize/_html.py links parsing.

2006-10-26  Titus Brown  <t@localhost.localdomain>
